--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,11 @@
 <resources>
 
     <string name="app_name">歪脖子看世界</string>
+    <string name="main_home">首页</string>
+    <string name="main_news">信息</string>
+    <string name="main_my_info">我的资料</string>
+    <string name="menu_search">搜索</string>
+    <string name="more">更多</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="weibosdk_attention">注意</string>
@@ -33,5 +38,11 @@
     <string name="oauth_button">授权</string>
     <string name="title_activity_logo">LogoActivity</string>
     <string name="title_activity_oauth">OAuthActivity</string>
+    <string name="login_button">登录</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_message">MessageActivity</string>
+    <string name="title_activity_my_info">MyInfoActivity</string>
+    <string name="title_activity_search">SearchActivity</string>
+    <string name="title_activity_more">MoreActivity</string>
 
 </resources>
