微博显示以及异步加载图片的工具类
1、微博显示
2、异步加载图片工具类的实现，callBack

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="resource">来自：新浪微博</string>
     <string name="create_time">1分钟前</string>
     <string name="bar_username">歪脖子看世界</string>
+    <string name="default_user_name">新浪</string>
 </resources>
