--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="main_home">首页</string>
     <string name="main_news">信息</string>
     <string name="main_my_info">我的资料</string>
+    <string name="title_info">资料</string>
     <string name="menu_search">搜索</string>
     <string name="more">更多</string>
     <string name="menu_settings">Settings</string>
@@ -63,5 +64,18 @@
     <string name="title_activity_person_data">PersonDataActivity</string>
     <string name="title_activity_status_detail">StatusDetailActivity</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_detail">微博正文</string>
+    <string name="title_activity_comment_list">CommentListActivity</string>
+    <string name="title_activity_user_info">UserInfoActivity</string>
+    <string name="tv_location">地址:</string>
+    <string name="tv_description_title">介绍:</string>
+    <string name="follow">关注</string>
+    <string name="weibo">微博</string>
+    <string name="follower">粉丝</string>
+    <string name="topic">话题</string>
+    <string name="unfollow">取消关注</string>
+    <string name="title_activity_following">FollowingActivity</string>
+    <string name="title_activity_follower_list">FollowerListActivity</string>
+    <string name="title_activity_user_weibo">UserWeiboActivity</string>
 
 </resources>
