搜索用户的实现，但没涉及图像的修改

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -79,5 +79,6 @@
     <string name="title_activity_user_weibo">UserWeiboActivity</string>
     <string name="title_activity_at_me">AtMeActivity</string>
     <string name="title_activity_comment_about_me">CommentAboutMeActivity</string>
+    <string name="search_hint">请输入要搜索用户的昵称</string>
 
 </resources>
